--- a/management.html
+++ b/management.html
@@ -149,7 +149,7 @@
                             <div class="col-lg-6 col-md-6 text-center">
                                 <div class="right-card position-relative mx-auto">
                                     <img
-                                        src="assets/image/homework/Group 235.png"
+                                        src="assets/image/management/management1.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -168,7 +168,7 @@
                 <!-- Item 1 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/Group66.svg" alt="Universal Access" class="img-fluid-1">
+                        <img src="assets/image/management/m1.svg" alt="Universal Access" class="img-fluid-1">
                     </div>
                     <h5 class="info-title mt-3">Accountability</h5>
                     <p class="info-desc">
@@ -179,7 +179,7 @@
                 <!-- Item 2 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/group67.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
+                        <img src="assets/image/management/m2.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
                     </div>
                     <h5 class="info-title mt-3">Transparency</h5>
                     <p class="info-desc">
@@ -190,7 +190,7 @@
                 <!-- Item 3 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets//image/homework/Group 419.svg" alt="Time Saving" class="img-fluid-3">
+                        <img src="assets//image/management/m3.svg" alt="Time Saving" class="img-fluid-3">
                     </div>
                     <h5 class="info-title mt-3">Archival Benefits</h5>
                     <p class="info-desc">
@@ -206,15 +206,15 @@
 <section class="notes-section">
     <div class="container">
         <div class="row notes-row">
-                <h2 class="notes-heading text-start mb-5">
-                    Track Student Fee Installment
-                </h2>
             <!-- LEFT COLUMN -->
             <div class="col-lg-6 col-md-6 col-12 notes-left">
                 <!-- Feature 1 -->
+                  <h2 class="notes-heading text-start mb-5">
+                    Track Student Fee Installment
+                </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s1.svg" alt="Document Upload">
+                        <img src="assets/image/management/t1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Comprehensive Records</h4>
@@ -227,7 +227,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s2.svg" alt="Centralized Platform">
+                        <img src="assets/image/management/t2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Real-Time Updates</h4>
@@ -240,7 +240,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s3.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/management/t3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Clear Visualization</h4>
@@ -258,7 +258,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/homework/Group 375.png"
+                                        src="assets/image/management/management2.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -281,7 +281,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/homework/Group 208.png"
+                                        src="assets/image/management/management3.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -296,7 +296,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s4.svg" alt="Document Upload">
+                        <img src="assets/image/management/au1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Automated Reminders</h4>
@@ -309,7 +309,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s5.svg" alt="Centralized Platform">
+                        <img src="assets/image/management/au2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Personalized Content</h4>
@@ -322,7 +322,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s6.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/management/au3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Timely Notifications</h4>
@@ -347,7 +347,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/group51.svg" alt="Document Upload">
+                        <img src="assets/image/management/gu1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Automated Receipt Generation</h4>
@@ -360,7 +360,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group52.svg" alt="Centralized Platform">
+                        <img src="assets/image/management/gu2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Accessible Documentation</h4>
@@ -373,7 +373,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group53.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/management/gu3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Professional Presentation</h4>
@@ -389,9 +389,9 @@
             <div class="col-lg-6 col-md-6 col-12 notes-right">
                 <div class="notes-image-box">
                     <!-- Background image applied from CSS -->
-                    <div class="notes-card">
+                    <div class="notes-card" style="margin-top: -104px;">
                           <img
-                                        src="assets/image/study/Group 402.png"
+                                        src="assets/image/management/management4.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
