--- a/performance.html
+++ b/performance.html
@@ -149,7 +149,7 @@
                             <div class="col-lg-6 col-md-6 text-center">
                                 <div class="right-card position-relative mx-auto">
                                     <img
-                                        src="assets/image/homework/Group 235.png"
+                                        src="assets/image/performance/performance1.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -168,7 +168,7 @@
                 <!-- Item 1 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/Group66.svg" alt="Universal Access" class="img-fluid-1">
+                        <img src="assets/image/performance/st1.svg" alt="Universal Access" class="img-fluid-1">
                     </div>
                     <h5 class="info-title mt-3">Comprehensive Evaluation</h5>
                     <p class="info-desc">
@@ -179,7 +179,7 @@
                 <!-- Item 2 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/group67.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
+                        <img src="assets/image/performance/st2.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
                     </div>
                     <h5 class="info-title mt-3">Easy Record-Keeping</h5>
                     <p class="info-desc">
@@ -190,7 +190,7 @@
                 <!-- Item 3 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets//image/homework/Group 419.svg" alt="Time Saving" class="img-fluid-3">
+                        <img src="assets//image/performance/st3.svg" alt="Time Saving" class="img-fluid-3">
                     </div>
                     <h5 class="info-title mt-3">Informed Decisions</h5>
                     <p class="info-desc">
@@ -214,7 +214,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s1.svg" alt="Document Upload">
+                        <img src="assets/image/performance/u1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Exam Schedule</h4>
@@ -227,7 +227,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s2.svg" alt="Centralized Platform">
+                        <img src="assets/image/performance/u2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Notification</h4>
@@ -240,7 +240,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s3.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/performance/u3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Reminder</h4>
@@ -258,7 +258,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/homework/Group 375.png"
+                                        src="assets/image/performance/performance2.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -281,7 +281,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/homework/Group 208.png"
+                                        src="assets/image/performance/performance3.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -296,7 +296,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s4.svg" alt="Document Upload">
+                        <img src="assets/image/performance/up1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Mark Entry</h4>
@@ -309,7 +309,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s5.svg" alt="Centralized Platform">
+                        <img src="assets/image/performance/up2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Automated Notifications</h4>
@@ -322,7 +322,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s6.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/performance/up3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Individual Progress</h4>
@@ -347,7 +347,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/group51.svg" alt="Document Upload">
+                        <img src="assets/image/performance/g1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Automated Scorecards</h4>
@@ -360,7 +360,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group52.svg" alt="Centralized Platform">
+                        <img src="assets/image/performance/g2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Inclusion of Details</h4>
@@ -373,7 +373,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group53.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/performance/g3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Access and Distribution</h4>
@@ -391,7 +391,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/study/Group 402.png"
+                                        src="assets/image/performance/performance4.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
