--- a/reminders.html
+++ b/reminders.html
@@ -150,7 +150,7 @@
                             <div class="col-lg-6 col-md-6 text-center">
                                 <div class="right-card position-relative mx-auto">
                                     <img
-                                        src="assets/image/homework/Group 235.png"
+                                        src="assets/image/reminders/reminder1.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -163,13 +163,11 @@
                 <section class="info-block-section py-5">
     <div class="container">
         <div class="info-block-wrapper p-4">
-
             <div class="row text-center gy-4">
-
                 <!-- Item 1 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/Group66.svg" alt="Universal Access" class="img-fluid-1">
+                        <img src="assets/image/reminders/r1.svg" alt="Universal Access" class="img-fluid-1">
                     </div>
                     <h5 class="info-title mt-3">Clarity</h5>
                     <p class="info-desc">
@@ -180,7 +178,7 @@
                 <!-- Item 2 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/group67.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
+                        <img src="assets/image/reminders/r2.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
                     </div>
                     <h5 class="info-title mt-3">Consistency</h5>
                     <p class="info-desc">
@@ -191,7 +189,7 @@
                 <!-- Item 3 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets//image/homework/Group 419.svg" alt="Time Saving" class="img-fluid-3">
+                        <img src="assets//image/reminders/r3.svg" alt="Time Saving" class="img-fluid-3">
                     </div>
                     <h5 class="info-title mt-3">Convenience</h5>
                     <p class="info-desc">
@@ -215,7 +213,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s1.svg" alt="Document Upload">
+                        <img src="assets/image/reminders/a1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Scheduled Reminders</h4>
@@ -228,7 +226,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s2.svg" alt="Centralized Platform">
+                        <img src="assets/image/reminders/a2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Personalized Content</h4>
@@ -241,7 +239,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s3.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reminders/a3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Prompt Notifications</h4>
@@ -259,8 +257,8 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/homework/Group 375.png"
-                                        class="main-hero-img"
+                                        src="assets/image/reminders/reminder2.png"
+                                        class="main-hero-img image_gap"
                                         alt="image"
                                         loading="lazy"
                                     >
@@ -282,7 +280,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/homework/Group 208.png"
+                                        src="assets/image/reminders/reminder3.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -297,7 +295,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s4.svg" alt="Document Upload">
+                        <img src="assets/image/reminders/aa1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Automated Notifications</h4>
@@ -310,7 +308,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s5.svg" alt="Centralized Platform">
+                        <img src="assets/image/reminders/aa2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Specific Information</h4>
@@ -323,7 +321,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s6.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reminders/aa3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Reduction of Delays</h4>
@@ -348,7 +346,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/group51.svg" alt="Document Upload">
+                        <img src="assets/image/reminders/p1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Instant Notifications</h4>
@@ -361,7 +359,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group52.svg" alt="Centralized Platform">
+                        <img src="assets/image/reminders/p2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Receipt Information</h4>
@@ -374,7 +372,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group53.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reminders/p3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Immediate Acknowledgment</h4>
@@ -392,7 +390,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/study/Group 402.png"
+                                        src="assets/image/reminders/reminder4.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -415,7 +413,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/study/Group 384.png"
+                                        src="assets/image/reminders/reminder5.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -430,7 +428,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 417.svg" alt="Document Upload">
+                        <img src="assets/image/reminders/s1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Recording Absences</h4>
@@ -443,7 +441,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 414.svg" alt="Centralized Platform">
+                        <img src="assets/image/reminders/s2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Automatic Notifications</h4>
@@ -456,7 +454,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 416.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reminders/s3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Absence Details</h4>
@@ -480,7 +478,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/group51.svg" alt="Document Upload">
+                        <img src="assets/image/reminders/sm1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Communication Modes</h4>
@@ -493,7 +491,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group52.svg" alt="Centralized Platform">
+                        <img src="assets/image/reminders/sm2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Efficient Communication</h4>
@@ -506,7 +504,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group53.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reminders/sm3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Versatility</h4>
@@ -524,7 +522,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/study/Group 402.png"
+                                        src="assets/image/reminders/reminder6.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -547,7 +545,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/study/Group 384.png"
+                                        src="assets/image/reminders/reminder7.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -562,7 +560,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 417.svg" alt="Document Upload">
+                        <img src="assets/image/reminders/au1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Scheduled Reminders</h4>
@@ -575,7 +573,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 414.svg" alt="Centralized Platform">
+                        <img src="assets/image/reminders/au2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Advance Notifications</h4>
@@ -588,7 +586,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 416.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reminders/au3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Faculty Efficiency</h4>
