--- a/reports.html
+++ b/reports.html
@@ -149,7 +149,7 @@
                             <div class="col-lg-6 col-md-6 text-center">
                                 <div class="right-card position-relative mx-auto">
                                     <img
-                                        src="assets/image/homework/Group 235.png"
+                                        src="assets/image/reports/report1.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -168,7 +168,7 @@
                 <!-- Item 1 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/Group66.svg" alt="Universal Access" class="img-fluid-1">
+                        <img src="assets/image/reports/r1.svg" alt="Universal Access" class="img-fluid-1">
                     </div>
                     <h5 class="info-title mt-3">Financial Clarity</h5>
                     <p class="info-desc">
@@ -179,7 +179,7 @@
                 <!-- Item 2 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets/image/homework/group67.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
+                        <img src="assets/image/reports/r2.svg" alt="Batch-Wide Consistency" class="img-fluid-2">
                     </div>
                     <h5 class="info-title mt-3">Process Improvement</h5>
                     <p class="info-desc">
@@ -190,7 +190,7 @@
                 <!-- Item 3 -->
                 <div class="col-12 col-md-4 info-item-box">
                     <div class="info-icon-wrap">
-                        <img src="assets//image/homework/Group 419.svg" alt="Time Saving" class="img-fluid-3">
+                        <img src="assets//image/reports/r3.svg" alt="Time Saving" class="img-fluid-3">
                     </div>
                     <h5 class="info-title mt-3">Marketing Strategy</h5>
                     <p class="info-desc">
@@ -214,7 +214,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s1.svg" alt="Document Upload">
+                        <img src="assets/image/reports/o1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Enrollment Analysis</h4>
@@ -227,7 +227,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s2.svg" alt="Centralized Platform">
+                        <img src="assets/image/reports/o2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Conversion Rates</h4>
@@ -240,7 +240,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s3.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reports/o3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Source Analysis</h4>
@@ -258,7 +258,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/homework/Group 375.png"
+                                        src="assets/image/reports/report2.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -281,7 +281,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/homework/Group 208.png"
+                                        src="assets/image/reports/report3.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -296,7 +296,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s4.svg" alt="Document Upload">
+                        <img src="assets/image/reports/c1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Course-Specific Data</h4>
@@ -309,7 +309,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s5.svg" alt="Centralized Platform">
+                        <img src="assets/image/reports/c2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Comparison</h4>
@@ -322,7 +322,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/homework/s6.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reports/c3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Performance Tracking</h4>
@@ -347,7 +347,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/group51.svg" alt="Document Upload">
+                        <img src="assets/image/reports/b1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Topic-wise Data</h4>
@@ -360,7 +360,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group52.svg" alt="Centralized Platform">
+                        <img src="assets/image/reports/b2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Progress Evaluation</h4>
@@ -373,7 +373,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group53.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reports/b3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Gap Analysis</h4>
@@ -391,7 +391,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/study/Group 402.png"
+                                        src="assets/image/reports/report4.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -414,7 +414,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/study/Group 384.png"
+                                        src="assets/image/reports/report5.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -429,7 +429,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 417.svg" alt="Document Upload">
+                        <img src="assets/image/reports/ba1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Academic Performance</h4>
@@ -442,7 +442,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 414.svg" alt="Centralized Platform">
+                        <img src="assets/image/reports/ba2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Attendance Data</h4>
@@ -455,7 +455,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 416.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reports/ba3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Comparative Analysis</h4>
@@ -479,7 +479,7 @@
                 <!-- Feature 1 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/group51.svg" alt="Document Upload">
+                        <img src="assets/image/reports/e1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Enquiry Tracking</h4>
@@ -492,7 +492,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group52.svg" alt="Centralized Platform">
+                        <img src="assets/image/reports/e2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Conversion Rates</h4>
@@ -505,7 +505,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group53.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reports/e3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Activity Records</h4>
@@ -514,7 +514,6 @@
                         </p>
                     </div>
                 </div>
-
             </div>
 
             <!-- RIGHT COLUMN -->
@@ -523,7 +522,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card">
                           <img
-                                        src="assets/image/study/Group 402.png"
+                                        src="assets/image/reports/report6.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -546,7 +545,7 @@
                     <!-- Background image applied from CSS -->
                     <div class="notes-card" style="">
                           <img
-                                        src="assets/image/study/Group 384.png"
+                                        src="assets/image/reports/report7.png"
                                         class="main-hero-img"
                                         alt="image"
                                         loading="lazy"
@@ -561,7 +560,7 @@
                 </h2>
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 417.svg" alt="Document Upload">
+                        <img src="assets/image/reports/ca1.svg" alt="Document Upload">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Cleared Fees</h4>
@@ -574,7 +573,7 @@
                 <!-- Feature 2 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 414.svg" alt="Centralized Platform">
+                        <img src="assets/image/reports/ca2.svg" alt="Centralized Platform">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Outstanding Fees</h4>
@@ -587,7 +586,7 @@
                 <!-- Feature 3 -->
                 <div class="notes-feature-box d-flex">
                     <div class="notes-icon">
-                        <img src="assets/image/study/Group 416.svg" alt="User-Friendly Interface">
+                        <img src="assets/image/reports/ca3.svg" alt="User-Friendly Interface">
                     </div>
                     <div class="notes-content">
                         <h4 class="notes-title">Overdue Fees</h4>
